# ST-2

include/: circle.h  tasks.h
src/: CMakeLists.txt  circle.cpp  tasks.cpp
test/: CMakeLists.txt  tests.cpp
